jS-Strict-Mode/Examples/example7.js
// Deleting a Function is not allowed
"use strict";
function fxn(p1, p2) { };
// delete fxn; // Removing comment from this statement will result in below mentioned Error.
// SyntaxError: Delete of an unqualified identifier in strict mode.  